--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <input type="reset" value="Reset">
             </form>
 
+            <li><a href="welcome.html">Sign out</a></li>
 
     <script src="main.js"></script>
   </body>
