--- a/budget.html
+++ b/budget.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -11,29 +13,53 @@
   <header id="header1">
       <h1>Budgeting/Expense Tracker Site!</h1>
   </header>
-      <h2 id="expenses">expenses</h2>
-          <form>
-              <label for="descriptionE">Description: </label>
-              <input type="text" id="descriptionE" name="descriptionE"> <br>
-              <label for="amountE">Amount: </label>
-              <input type="number" id="amount" name="amountE"><br>
-              <input type="submit" value="Submit"> 
-              <input type="reset" value="Reset">
-          </form>
+    <h2 id="expenses">expenses</h2>
+        <form>
+            <label for="descriptionE">Description: </label>
+            <input type="text" id="descriptionE" name="descriptionE"> <br>
+            <label for="amountE">Amount: </label>
+            <input type="number" id="amount" name="amountE"><br>
+            <input type="submit" value="Submit"> 
+            <input type="reset" value="Reset">
+        </form>
 
-      <h2 id="income">income</h2>
-          <form>
-              <label for="descriptionI">Description: </label>
-              <input type="text" id="descriptionI" name="descriptionI"> <br>
-              <label for="amountI">Amount: </label>
-              <input type="number" id="amountI" name="amount"I><br>
-              <input type="submit" value="Submit"> 
-              <input type="reset" value="Reset">
-          </form>
+    <h2 id="income">income</h2>
+        <form>
+            <label for="descriptionI">Description: </label>
+            <input type="text" id="descriptionI" name="descriptionI"> <br>
+            <label for="amountI">Amount: </label>
+            <input type="number" id="amountI" name="amount"I><br>
+            <input type="submit" value="Submit"> 
+            <input type="reset" value="Reset">
+        </form>
 
-          <li><a href="index.html">Sign out</a></li>
+    <li><a href="index.html">Sign out</a></li> <br>
+    
+    <table>
+        <tr>
+          <th>Description</th>
+          <th>Date</th>
+          <th>Amount</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Maria Anders</td>
+          <td>Germany</td>
+        </tr>
+        <tr>
+          <td>Centro comercial Moctezuma</td>
+          <td>Francisco Chang</td>
+          <td>Mexico</td>
+        </tr>
+      </table>
+        
 
   <script src="main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script> <!--boot strap js libraries-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 </body>
 </html>
 
