--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
         <p>Profile Picture</p>
         <img id="image" class="rounded-circle" width="100" height="100">
         <p >Email</p>
-        <p id="email>"></p>
+        <p id="email"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
     </div>
 
 
 
-    <script src="main.js"></script>
+    
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script> <!--boot strap js libraries-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+    <script src="main.js"></script>
 
 </body>
 </html>
