--- a/budget.html
+++ b/budget.html
@@ -28,7 +28,7 @@
             <label for="descriptionI">Description: </label>
             <input type="text" id="descriptionI" name="descriptionI"> <br>
             <label for="amountI">Amount: </label>
-            <input type="number" id="amountI" name="amount"I><br>
+            <input type="number" id="amountI" name="amountI"><br>
             <input type="submit" value="Submit"> 
             <input type="reset" value="Reset">
         </form>
