--- a/budget.html
+++ b/budget.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="237541678153-4hj6ef9n6hq5p4t41r81gc5hm2ln2j2q.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" 
+        content="237541678153-4hj6ef9n6hq5p4t41r81gc5hm2ln2j2q.apps.googleusercontent.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
