--- a/budget.html
+++ b/budget.html
@@ -17,7 +17,8 @@
     <h2 id="expenses">expenses</h2>
         <form>
             <label for="descriptionE">Description: </label>
-            <input type="text" id="descriptionE" name="descriptionE"> <br>
+            <textarea id="descriptionE" name="descriptionE"></textarea>
+
             <label for="amountE">Amount: </label>
             <input type="number" id="amount" name="amountE"><br>
             <input type="submit" value="Submit"> 
@@ -62,7 +63,7 @@
           crossorigin="anonymous"></script> <!--boot strap js libraries-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
       <script src="main.js"></script>
-
+      <script src="https://accounts.google.com/gsi/client" async></script>
 </body>
 </html>
 
