--- a/index.html
+++ b/index.html
@@ -3,36 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" 
-        content="237541678153-4hj6ef9n6hq5p4t41r81gc5hm2ln2j2q.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="237541678153-4hj6ef9n6hq5p4t41r81gc5hm2ln2j2q.apps.googleusercontent.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Log In</title>
-    </head>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
+
+</head>
 <body>
-    <h2 class="alert alert-primary">Sign In With Google</h2> 
+    <h2 class="alert alert-primary">Sign In With Google</h2>
+    <div id="g_id_onload"
+         data-client_id="237541678153-4hj6ef9n6hq5p4t41r81gc5hm2ln2j2q.apps.googleusercontent.com"
+         data-callback="handleCredentialResponse">
+    </div>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    
-    <div class="data">
+
+    <div class="data" style="display:none;">
         <p>Name</p>
         <p id="name" class="alert alert-success"></p>
         <p>Profile Picture</p>
         <img id="image" class="rounded-circle" width="100" height="100">
-        <p >Email</p>
+        <p>Email</p>
         <p id="email"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
     </div>
 
-
-
-    <script src="main.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script> <!--boot strap js libraries-->
+        crossorigin="anonymous"></script> <!-- Bootstrap JS libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    
 
+    <script>
+        function handleCredentialResponse(response) {
+            const responsePayload = decodeJwtResponse(response.credential);
+
+            console.log("ID: " + responsePayload.sub);
+            console.log('Full Name: ' + responsePayload.name);
+            console.log('Given Name: ' + responsePayload.given_name);
+            console.log('Family Name: ' + responsePayload.family_name);
+            console.log("Image URL: " + responsePayload.picture);
+            console.log("Email: " + responsePayload.email);
+
+            $("#name").text(responsePayload.name);
+            $("#email").text(responsePayload.email);
+            $("#image").attr('src', responsePayload.picture);
+            $(".data").css("display", "block");
+            $(".g-signin2").css("display", "none");
+        }
+
+        function decodeJwtResponse(token) {
+            // This function should decode the JWT token and return the payload
+            // You need to implement this function based on your requirements
+        }
+
+        function signOut() {
+            var auth2 = gapi.auth2.getAuthInstance();
+            auth2.signOut().then(function () {
+                console.log('User signed out.');
+                alert("You have been signed out successfully!");
+                $(".g-signin2").css("display", "block");
+                $(".data").css("display", "none");
+            });
+        }
+    </script>
 </body>
 </html>
