--- a/budget.html
+++ b/budget.html
@@ -14,7 +14,9 @@
   <header id="header1">
       <h1>Budgeting/Expense Tracker Site!</h1>
   </header>
-    <h2 id="expenses">expenses</h2>
+
+  <!--
+    <h2 id="expensess">expensess</h2>
         <form>
             <label for="descriptionE">Description: </label>
             <textarea id="descriptionE" name="descriptionE"></textarea>
@@ -36,24 +38,32 @@
         </form>
 
     <li><a href="index.html">Sign out</a></li> <br>
-    
-    <table>
+    -->
+    <table id="expenses">
         <tr>
           <th>Description</th>
           <th>Date</th>
           <th>Amount</th>
         </tr>
+
         <tr>
-          <td>Alfreds Futterkiste</td>
-          <td>Maria Anders</td>
-          <td>Germany</td>
+            <td id="startD" class="description">
+                <input class="description" type="text">
+            </td>
+            <td id="startDa" class="date">
+                <input class="date" type="date">
+            </td>
+            <td id="startA" class="amount">
+                <input class="amount" type="number">
+            </td>
+            <td>
+                <button class="delete">Delete</button>
+            </td>
         </tr>
-        <tr>
-          <td>Centro comercial Moctezuma</td>
-          <td>Francisco Chang</td>
-          <td>Mexico</td>
-        </tr>
+        <!--need t dynamically add tr with td inside -->
       </table>
+
+      <button id="newExpense">Add Row</button>
         
 
   
@@ -62,7 +72,7 @@
           integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
           crossorigin="anonymous"></script> <!--boot strap js libraries-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-      <script src="main.js"></script>
+      <script src="budget.js"></script>
       <script src="https://accounts.google.com/gsi/client" async></script>
 </body>
 </html>
