--- a/budget.html
+++ b/budget.html
@@ -42,21 +42,31 @@
     <table id="expenses">
         <tr>
           <th>Description</th>
+          <th>Expense/Income</th>
           <th>Date</th>
           <th>Amount</th>
         </tr>
 
         <tr>
             <td id="startD" class="description">
-                <input class="description" type="text">
+                <input class="description" type="text">   
             </td>
+
+            <td id="startS">
+                <select class="selectBox" name="selectionBox">
+                    <option value="expense">Expense</option>
+                    <option value="income">Income</option>
+                </select>
+            </td>
+
+
             <td id="startDa" class="date">
                 <input class="date" type="date">
             </td>
             <td id="startA" class="amount">
                 <input class="amount" type="number">
             </td>
-            <td>
+            <td id="startDel">
                 <button class="delete">Delete</button>
             </td>
         </tr>
