--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p id="email"></p>
         <button type="button" class="btn btn-danger" onclick="signOut();">Sign Out</button>
     </div>
-
+    <a href="budget.html">Home</a>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -67,6 +67,8 @@
                 $(".data").css("display", "none");
             });
         }
+
+        
     </script>
 </body>
 </html>
