added firebase sign in

--- a/budget.html
+++ b/budget.html
@@ -54,17 +54,23 @@
       <br>
       <br>
 
-      <div class =totalIncome>
-        <h1 id="H1totalIncome">$0.00</h1>
-      </div>
+      <div class="totals">
 
-      <div class="H1totalExpense">
-        <h1 id="H1totalExpense">$0.00</h1>
-      </div>
+        <div class =totalIncome>
+            <h1 id="H1totalIncome">$0.00</h1>
+            <h1>Income</h1>
+        </div>
 
-      <div class="difference">
-        <h1 id="H1difference">$0.00</h1>
-      </div>
+        <div class="H1totalExpense">
+            <h1 id="H1totalExpense">$0.00</h1>
+            <h1>Expenses</h1>
+        </div>
+
+        <div class="difference">
+            <h1 id="H1difference">$0.00</h1>
+            <h1>Difference</h1>
+        </div>
+    </div>
 
       <a href="budget.html">Home</a>
 
