--- a/budget.html
+++ b/budget.html
@@ -72,7 +72,9 @@
         </div>
     </div>
 
-      <a href="budget.html">Home</a>
+    <button id="logoutButton">Log Out</button>
+
+  
 
   
       <script src="https://apis.google.com/js/platform.js" async defer></script>
@@ -80,7 +82,8 @@
           integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
           crossorigin="anonymous"></script> <!--boot strap js libraries-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-      <script src="budget.js"></script>
+      <script src="budget.js" type="module"></script>
+
       <script src="https://accounts.google.com/gsi/client" async></script>
        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
