save data when click save data for all document fields
if u save adn then delete the row it wont delete, its nto editable once saved

--- a/budget.html
+++ b/budget.html
@@ -50,6 +50,7 @@
       </table>
 
       <button id="newExpense">Add Row</button>
+      <button id="save">Save Data</button> <!--save data to firebase-->
 
       <br>
       <br>
