color and style total buttons

--- a/budget.html
+++ b/budget.html
@@ -28,7 +28,7 @@
       </table>
 
       <button id="newExpense">Add Row</button>
-      <button id="save">Save Data</button> <!--save data to firebase-->
+    
 
       <br>
       <br>
@@ -40,7 +40,7 @@
             <h1>Income</h1>
         </div>
 
-        <div class="H1totalExpense">
+        <div class="totalExpense">
             <h1 id="H1totalExpense">$0.00</h1>
             <h1>Expenses</h1>
         </div>
