it loads the data based on month, but if swith month it wont get rid of whats already loaded

--- a/budget.html
+++ b/budget.html
@@ -15,6 +15,11 @@
       <h1>Budgeting/Expense Tracker Site!</h1>
   </header>
 
+  <div class="monthSelector">
+    <h1 id="month"></h1>
+    <input type="month" id="monthPicker" name="month">
+  </div>
+    
     <table id="expenses">
         <tr>
           <th>Description</th>
