--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <form action="#">
         <h3>Login</h3>
         <label for="username"> Username
-            <input type="email" placeholder="Email or Phone" id="email">
+            <input type="email" placeholder="Email" id="email">
         </label>
         <br>
         <label for="username"> Password
