--- a/budget.html
+++ b/budget.html
@@ -15,6 +15,15 @@
       <h1>Budgeting/Expense Tracker Site!</h1>
   </header>
 
+  <header id="tabs">
+  
+    <a href="budget.html">Monthly Sort</a>  
+    <a href="categorySort.html">Category Sort</a>
+    <a href="graphs.html">Graphs</a>
+    <hr>
+
+</header>
+
   <div class="monthSelector">
     <h1 id="month"></h1>
     <input type="month" id="monthPicker" name="month">
