--- a/budget.html
+++ b/budget.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>Budget</title>
 </head>
 <body>
@@ -58,6 +59,10 @@
       </table>
 
       <button id="newExpense">Add Row</button>
+
+      <h4 id="Breakdown">Breakdown By Categories</h3>
+  <!--  <canvas id="myPieChart" width="400" height="400"></canvas> -->
+
     
 
       <br>
